# mpc-keysafe

./: .gitmodules  CMakeLists.txt  README.md  codesafe.cmake  ncore.cmake
core/: CMakeLists.txt  http_service.c
